bizinikiwi/pezframe/support/test/tests/pezpallet_ui/view_function_not_public.stderr
error: Invalid pezpallet::view_functions, view function must be public: `pub fn`
  --> tests/pezpallet_ui/view_function_not_public.rs:33:3
   |
33 |         fn get_value() -> Option<u32> {
   |         ^^
